# mojo-rust-python-perf

./: .gitignore  Cargo.toml  Makefile  README.md  pyproject.toml
.cargo/: config.toml
benchmarking/: __init__.py  __main__.py  cli.py  commands.py  paths.py  report.py  runners.py  types.py
benchmarking/algorithms/: __init__.py  n_body.py  n_body_numpy.py  pidigits.py
benchmarking/problems/n_body/: commands.py  runner.py
benchmarking/problems/n_body/python/n_body/: n_body.py
n_body_mojo/: n_body.mojo  n_body_naive.mojo  n_body_simd.mojo  pixi.toml  test_n_body.mojo  test_n_body_naive.mojo
n_body_rust/: .gitignore  Cargo.toml
n_body_rust/benches/: .rustc_info.json  benchmark.rs
n_body_rust/src/: lib.rs  main.rs
pidigits_mojo/: pidigits.mojo
pidigits_rust/: Cargo.toml  Makefile.toml
pidigits_rust/benches/: benchmark.rs
pidigits_rust/src/: lib.rs  main.rs
python_rust_mojo_perf/n_body_python/: n_body.py
python_rust_mojo_perf/pidigits/: pidigits.py
scripts/: pypy_nbody.py
tests/: test_n_body.py  test_pidigits.py
