[project]
name = "benchmarking"
version = "0.2.0"
description = "Performance comparison of the same algorithms in Python, NumPy, Rust and Mojo"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
authors = [{ name = "Mikko Leppänen", email = "mleppan23@gmail.com" }]
dependencies = [
    "click>=8.1",
    "numpy>=2.1",
]

[project.scripts]
benchmarks = "benchmarking.__main__:cli"

[dependency-groups]
dev = [
    "mypy>=1.11",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["benchmarking"]

# --- Ruff: linter + formatter (replaces black + isort) ---------------------
[tool.ruff]
line-length = 100
# target-version is inferred from project.requires-python.
exclude = [".git", ".mypy_cache", ".ruff_cache", "target"]

[tool.ruff.lint]
select = [
    "E", "F", "B", "W", "I", "C4", "PIE", "RET", "SIM", "RUF", "C90",
    "UP", "ERA", "ARG", "TID", "PERF", "SLF", "PTH", "FURB", "PL",
]
ignore = ["E501"] # line-too-long is handled by the formatter

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["SLF001", "PLR2004"] # tests reach into internals and use literal expectations

[tool.ruff.lint.mccabe]
max-complexity = 10

# --- mypy ------------------------------------------------------------------
[tool.mypy]
python_version = "3.14"
strict = true
pretty = true
show_error_codes = true
warn_unreachable = true
ignore_missing_imports = true

# --- pytest ----------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-ra"
