[package]
name = "n_body_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
smallvec = { version = "1.13.2", features = ["const_generics", "const_new"] }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false
path = "benches/benchmark.rs"
