[package]
name = "pidigits_rust"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
clap.workspace = true
color-eyre.workspace = true
rug.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "benchmark"
harness = false
path = "benches/benchmark.rs"
